knative/event-source-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cloudevents-source
spec:
  selector:
    source: cloudevents-source
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  type: ClusterIP
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: cloudevents-source-route
spec:
  gateways:
  - knative-shared-gateway.knative-serving.svc.cluster.local
  - mesh
  hosts:
  - cloudevents-source.default.example.com
  http:
  - match:
    - authority:
        exact: cloudevents-source.default.example.com
    route:
    - destination:
        host: cloudevents-source.default.svc.cluster.local
        port:
          number: 80
      weight: 100
    timeout: 1m0s
